DaemonSet/networkpolicy.yaml
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy
metadata: 
  name: my-networkpolicy
spec:
    podSelector: 
      matchLabels:
        app: myapp-first
    ingress: 
      - from: 
         - podSelector: 
              matchLabels:
                app: myapp-first
